remove password from log

--- a/tasks/postinstall.yml
+++ b/tasks/postinstall.yml
@@ -13,6 +13,7 @@
     owner: root
     group: root
     mode: 0400
+  no_log: true
 
 - name: Users creation
   os_user:
@@ -29,6 +30,7 @@
   until: add_user is success
   retries: 5
   delay: 10
+  no_log: true
 
 
 - name: Projects creation
