Add `use_ssh_args` to synchronize module Permit to use the proxyjump e.g

--- a/tasks/credentials.yml
+++ b/tasks/credentials.yml
@@ -9,6 +9,7 @@
     dest: "{{ openio_keystone_tmp_keys_dir }}/credential-keys/"
     archive: "yes"
     delete: "yes"
+    use_ssh_args: "yes"
   when: inventory_hostname == groups[openio_keystone_nodes_group][0]
   changed_when: false
 
@@ -19,6 +20,7 @@
     dest: "{{ openio_keystone_credentials_tokens_key_repository }}"
     archive: "yes"
     delete: "yes"
+    use_ssh_args: "yes"
   when: inventory_hostname != groups[openio_keystone_nodes_group][0]
 
 - name: Reset credentials keys ownership
