--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ env:
       VERSION: 7
     - DISTRIBUTION: ubuntu
       VERSION: 16.04
+    - DISTRIBUTION: ubuntu
+      VERSION: 18.04
 #    - DISTRIBUTION: debian
 #      VERSION: 9
 
