BUGFIX/MINOR(keystone): Add a logrotate configuration
 ##### ISSUE TYPE
- Bugfix

 ##### SUMMARY
As described in OS-47, today keystone's logs are unmanaged

 ##### SCOPE (skeleton only)
- keystone

 ##### IMPACT
N/A

 ##### ADDITIONAL INFORMATION

--- a/tasks/postinstall.yml
+++ b/tasks/postinstall.yml
@@ -14,4 +14,12 @@
     group: root
     mode: 0400
   no_log: "{{ openio_keystone_no_log }}"
+
+- name: 'Install configuration logrotate files'
+  template:
+    src: openstack-keystone.conf.j2
+    dest: "/etc/logrotate.d/openstack-keystone"
+    owner: root
+    group: root
+    mode: '0644'
 ...
