--- a/docker-tests/test_mysql.yml
+++ b/docker-tests/test_mysql.yml
@@ -37,11 +37,8 @@
 
     - role: users
     - role: repo
-      openio_repository_openstack_release: 'queens'
       openio_repository_no_log: false
-      openio_repository_products:
-        sds:
-          release: "18.10"
+      openio_repository_mirror_host: mirror2.openio.io
     - role: gridinit
       openio_gridinit_per_ns: true
       openio_gridinit_namespace: TRAVIS
