--- a/tasks/credentials_create.yml
+++ b/tasks/credentials_create.yml
@@ -17,6 +17,7 @@
   stat:
     path: "{{ openio_keystone_credentials_tokens_key_repository }}/0"
   register: _credential_keys
+  tags: configure
 
 - name: Check for credential keys on all Keystone containers
   find:
@@ -27,6 +28,7 @@
   register: credential_key_list
   delegate_to: "{{ item }}"
   with_items: "{{ groups[openio_keystone_nodes_group] }}"
+  tags: configure
 
 
 - name: Aggregate the collected file lists
@@ -42,6 +44,7 @@
       {% endfor -%}
       {{ _var }}
   when: not credential_key_list is skipped
+  tags: configure
 
 - name: Collect the existing keys from containers
   slurp:
@@ -50,6 +53,7 @@
   with_items: "{{ existing_credential_keys }}"
   register: collected_existing_credential_keys
   when: existing_credential_keys is defined
+  tags: configure
 
 - name: Ensure the target directory exists on the master Keystone container
   file:
@@ -59,6 +63,7 @@
     group: "{{ openio_keystone_system_group_name }}"
     mode: "0700"
   when: not collected_existing_credential_keys is skipped
+  tags: configure
 
 - name: Drop the existing credential keys in the master Keystone container
   copy:
@@ -70,6 +75,7 @@
   when: not collected_existing_credential_keys is skipped
   register: drop_existing_credential_keys
   with_indexed_items: "{{ collected_existing_credential_keys.results | map(attribute='content') | list | unique }}"
+  tags: configure
 
 - name: Create credential keys for Keystone
   command: >
@@ -80,6 +86,7 @@
   when:
     - not _credential_keys.stat.exists
     - not drop_existing_credential_keys is changed
+  tags: configure
 
 - name: Ensure newest key is used for credential in Keystone
   command: >
@@ -88,6 +95,7 @@
                                        --keystone-group "{{ openio_keystone_system_group_name }}"
   when: create_credential_keys is skipped
   changed_when: false
+  tags: configure
 
 - name: Rotate credential keys for Keystone
   command: >
@@ -96,4 +104,5 @@
                                        --keystone-group "{{ openio_keystone_system_group_name }}"
   when: create_credential_keys is skipped
   changed_when: false
+  tags: configure
 ...
