--- a/tasks/Debian.yml
+++ b/tasks/Debian.yml
@@ -3,6 +3,7 @@
   apt:
     update_cache: true
   changed_when: false
+  tags: install
 
 - name: Install packages
   package:
@@ -16,11 +17,13 @@
   until: install_packages is success
   retries: 5
   delay: 2
+  tags: install
 
 - name: Remove default keystone service
   file:
     path: /etc/apache2/sites-enabled/keystone.conf
     state: absent
+  tags: install
 
 - name: Upgrade python-shade
   pip:
@@ -32,4 +35,5 @@
   retries: 5
   delay: 2
   ignore_errors: "{{ ansible_check_mode }}"
+  tags: install
 ...
