--- a/tasks/credentials.yml
+++ b/tasks/credentials.yml
@@ -1,6 +1,7 @@
 ---
 - import_tasks: credentials_create.yml
   when: inventory_hostname == groups[openio_keystone_nodes_group][0]
+  tags: configure
 
 - name: Fetch credentials tokens locally
   synchronize:
@@ -13,6 +14,7 @@
   when: inventory_hostname == groups[openio_keystone_nodes_group][0]
   changed_when: false
   ignore_errors: "{{ ansible_check_mode }}"
+  tags: configure
 
 - name: Copying credentials keys to all keystone hosts
   synchronize:
@@ -23,6 +25,7 @@
     delete: "yes"
     use_ssh_args: "yes"
   when: inventory_hostname != groups[openio_keystone_nodes_group][0]
+  tags: configure
 
 - name: Reset credentials keys ownership
   file:
@@ -31,4 +34,5 @@
     group: "{{ openio_keystone_system_group_name }}"
     state: directory
     recurse: "yes"
+  tags: configure
 ...
